# scwdk-svn

branches/WidgetCurses/: AUTHORS  Doxyfile  Makefile.in  WidgetCurses.kdevelop.pcs  WidgetCurses.spec  WidgetCurses.tag  configure  configure.in  widgetcurses.kdevelop  widgetcurses.kdevses
branches/WidgetCurses/autom4te.cache/: output.0  output.1  output.2  output.3  requests  traces.0  traces.1  traces.2  traces.3
branches/WidgetCurses/debug/: Makefile  config.status  libtool
branches/WidgetCurses/debug/src/: Makefile  widgetcurses
branches/WidgetCurses/debug/src/.deps/: myapplication.Po  widgetcurses.Po
branches/WidgetCurses/debug/src/libWidgetCurses/: Makefile
branches/WidgetCurses/debug/src/libWidgetCurses/.deps/: StyledString.Plo  application.Plo  cursesattr.Plo  cursesterm.Plo  events.Plo  exstring.Plo  label.Plo  layout.Plo  mutex.Plo  object.Plo  painter.Plo  pxy.Plo  rect.Plo  screen.Plo  size.Plo  thread.Plo  waitcontrol.Plo  widget.Plo  window.Plo
branches/WidgetCurses/src/: Makefile.am  Makefile.in  myapplication.cpp  myapplication.cpp~previous  myapplication.h  myapplication.h~previous  netspeedsensortest.cpp  netspeedsensortest.h  widgetcurses.cpp  widgetcurses.cpp~previous
branches/WidgetCurses/src/libWidgetCurses/: Layouts  Makefile.am  Makefile.in  Rect  String  Style  StyledString.cpp  StyledString.cpp~previous  StyledString.h  Widget  application.cpp  application.cpp~previous  application.h  application.h~previous  ccutils.h  ccutils.h~previous  colors.xml  cursesattr.cpp  cursesattr.cpp~previous  cursesattr.h  cursesattr.h~previous  cursesterm.cpp  cursesterm.cpp~previous  cursesterm.h  cursesterm.h~previous  events.cpp  events.cpp~previous  events.h  events.h~previous  exstring.cpp  exstring.h  htmlexports.cpp  htmlexports.cpp~previous  label.cpp  label.cpp~previous  label.h  label.h~previous  layout.cpp  layout.cpp~previous  layout.h  (+45 more)
branches/WidgetCurses/templates/: h
branches/freebsd/: Makefile.in  configure  scwdk.kdevelop.pcs  scwdk.kdevses  scwdk.tag
branches/freebsd/src/: Makefile.am  Makefile.in  scwdk.cpp
trunk/: AUTHORS  Doxyfile  Makefile.am  Makefile.in  configure  configure.in  scwdk.kdevelop  scwdk.kdevelop.pcs  scwdk.kdevses
trunk/src/: Makefile.am  Makefile.in  scwdk.cpp
trunk/templates/: h
